Ich fühle mich Disko denn die Diskussion ist fertig

--- a/v606/content/anhang.tex
+++ b/v606/content/anhang.tex
@@ -2,15 +2,28 @@
 
 \Large\textbf{Anhang}
 
-
 \begin{figure}
     \centering
-    \includepdf[page= 1, scale=0.75]{content/MessdatenVXXX.pdf}
+    \includepdf[page= 1, scale=0.75]{content/MessdatenV606.pdf}
 \end{figure}
 
 \newpage
 
 \begin{figure}
     \centering
-    \includepdf[page= 2, scale=0.75]{content/MessdatenVXXX.pdf}
+    \includepdf[page= 2, scale=0.75]{content/MessdatenV606.pdf}
+\end{figure}
+
+\newpage
+
+\begin{figure}
+    \centering
+    \includepdf[page= 3, scale=0.75]{content/MessdatenV606.pdf}
+\end{figure}
+
+\newpage
+
+\begin{figure}
+    \centering
+    \includepdf[page= 4, scale=0.75]{content/MessdatenV606.pdf}
 \end{figure}
