--- a/v606/content/diskussion.tex
+++ b/v606/content/diskussion.tex
@@ -1,2 +1,26 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Bei der Analyse der Filterkurve ergab sich aus den Messwerten eine Güte $Q = \num{27.89 +- 0.06}{}$. Am Sinusgenerator wurde eine Güte $Q_\text{real} = 20$
+eingestellt, was bedeutet, dass das Messergebnis um $\symup{\Delta}(Q) = \qty{39.45}{\percent}$ von dem realen Wert abweicht. Jedoch modelliert -- wie in 
+\autoref{fig:plot} zu erkennen ist -- der Fit, mit welchem die Werte der Frequenzen $\nu_-$, $\nu_+$ und $\nu_0$ ermittelt wurden, nicht ideal den Verlauf
+der Messwerte. Dies liegt der Tatsache zu Grunde, dass die Filterkurve einen sehr starken Anstieg verzeichnet und nicht genügend Messwerte in diesem Bereich
+genommen werden konnten, obwohl bereits eine sehr kleine Schrittweite im Bereich des Maximums gewählt wurde. Möglicherweise könnte ein besseres Ergebnis erzielt 
+werden, indem nur die Messwerte um das Maximum zur Interpolation verwendet würden. Die hohe Abweichung lässt sich hauptsächlich mit der Ungenauigkeit des Fits und 
+den daraus resultierenden Schwierigkeiten in der Bestimmung der Frequenzen erklären. Eine genauere Bestimmung wäre nur mit einer besseren Auflösung 
+der Frequenzen möglich.
+
+Im Hauptteil des Versuches wurden die Suszeptibilitäten der verschiedenen Stoffe auf zwei Weisen ermittelt. Schon bei der Messung fiel auf, dass die Messwerte
+der Spannungen für zwei Stoffe nur sehr schwierig von der Grundspannung der Brücke differenziert werden können. Des Weiteren wurden unerklärliche Sprünge der
+Anzeige des Voltmeters bemerkt, die in der Größenordnung der Messwerte lagen. Die Messergebnisse werden in den Tabellen \ref{tab:Chi_abwU} und \ref{tab:Chi_abwR}
+mit den Theoriewerten vergliechen. Zum Stoff $\symup{C}_6\symup{O}_{12}\symup{Pr}_3$ der Praseodymoxalat-Gruppe konnte kein Theoriewert bestimmt werden, da
+keine Angaben zur Dichte des Materials und zu den quantenmechanischen Eigenschaften zu finden sind. Der Stoff $\symup{Nd}_2\symup{O}_3$ (Neodym(III)-oxid)
+wurde nicht untersucht, da keine Veränderung der Messanzeigen beim Einführen der Probe in die Spule festgestellt werden konnte. Die experimentellen Werte
+der Suszeptibilitäten der verbleibenden beiden Stoffe unterscheiden sich für die Ermittlung des Wertes aus den Spannungen respektive Widerständen kaum.
+Dies ist ein Indiz dafür, dass beide Bestimmungsmethoden gleichwertig sind. Die relativen Abweichungen zu den Theoriewerten fallen für Dysprosium(III)-oxid
+($\symup{Dy}_2\symup{O}_3$) relativ gering aus und liegen bei $\symup{\Delta}\chi_\text{Spannung} = \qty{13.74}{\percent}$ und
+$\symup{\Delta}\chi_\text{Widerstand} = \qty{14.59}{\percent}$. Dies stellt eine akzeptable Abweichung im Rahmen der Messgenauigkeit und der zuvor getroffenen 
+Näherungen dar. Die Suszeptibilitäten des Gadolinium(III)-oxids ($\symup{Gd}_2\symup{O}_3$) weichen um $\symup{\Delta}\chi_\text{Spannung} = \qty{115.37}{\percent}$
+und $\symup{\Delta}\chi_\text{Widerstand} = \qty{113.27}{\percent}$ ab. Eine spezielle Ursache hierfür kann nicht ermittelt werden. 
+
+Insgesamt ist die Bestimmung der Suszeptibilitäten mit dem verwendeten Verfahren inakkurat. Die Messwerte sind in einer ähnlichen Größenordnung wie potenzielle
+Fehlersignale und es werden viele Näherungen getroffen, die sich in Summe stark auf die Messgenauigkeit auswirken. 
