--- a/v606/v606.tex
+++ b/v606/v606.tex
@@ -1,6 +1,6 @@
 \input{header.tex}
 
-\subject{606}
+\subject{v606}
 \title{Messung der Suszeptibilität paramagnetischer Stoffe}
 \date{%
   Durchführung: 26.04.2022
@@ -22,6 +22,6 @@
 
 \printbibliography{}
 
-%\input{content/anhang.tex}
+\input{content/anhang.tex}
 
 \end{document}
