--- a/v606/content/theorie.tex
+++ b/v606/content/theorie.tex
@@ -69,7 +69,7 @@ ausgedrückt werden.
 \end{equation}
 Hierbei besteht kein lineare zusammenhang zwischen $\vec{M}$ und $\vec{H}$, da $\chi$ sowohl von der Temperatur der Probe, sowie von $\vec{H}$ selbst abhängt.
 
-\subsection{Suszeptibilität Selterner-Erd-Verbindungen}
+\subsection{Suszeptibilität Seltener-Erd-Verbindungen}
 \label{subsec:suzepseltenererden}
 Ionen seltener Erden weisen einen starken Paramagnetismus auf. Wie in \autoref{subsec:drehimpuls} erklärt, folgt aus dieser Eigenschaft, dass die Elektronenhüllen dieser Stoffe
 große Drehimpulse haben. Diese entstehen durch die 4f-Elektronen in der Elektronenhülle. 4f-Elektronen treten erst ab Ordnungszahlen $\geq 58$. Die 4f-Elektronen liegen weit
@@ -94,7 +94,7 @@ gefüllt und in die andere wird die Messprobe eingeführt. Die beiden Spulen wer
 \autoref{fig:schaltplan} dargestellt ist, kann die Suszeptibilität nun über zwei Methoden bestimmt werden.
 \begin{figure}
     \centering
-    \includegraphics[width = .7\textwidth]{content/Schaltung1.PNG}
+    \includegraphics[width = .5\textwidth]{content/Schaltung1.PNG}
     \caption{Schaltplan einer Brückenschaltung zweier identischer Spulen. \cite{v606}}
     \label{fig:schaltplan}
 \end{figure} 
@@ -121,7 +121,7 @@ Dabei kann für hinreichend große Messfrequenzen $\chi$ angenähert werden.
 
 
 Für die Bestimmung von $\chi$ über die zweite Methode wird die Abgleichbedingung $r_1R_4 = r_2R_3$ unter kleiner Abweichung $\Delta R$ betrachtet. Diese Abweichung entsteht
-durch das Einführen der Probe in eine der Spulen. Die Abweichung $\Delta R$ lässt sich aus der Abgleichbedingung und der Näherung $\Delta L << L$ bestimmt.
+durch das Einführen der Probe in eine der Spulen. Die Abweichung $\Delta R$ lässt sich aus der Abgleichbedingung und der Näherung $\Delta L << L$ bestimmen.
 \begin{equation*}
     \Delta R = \chi\frac{R_3}{2}\frac{Q}{F}
 \end{equation*}
