Korrekturlesen Schmurlesen sag ich immer

--- a/v606/content/auswertung.tex
+++ b/v606/content/auswertung.tex
@@ -10,8 +10,8 @@ berechnet.
 
 \subsection{Filterkurve des Selektivverstärkers}
 \label{subsec:A_Filterkurve}
-Im ersten Teil des Versuches wird die Filterkurve des Selektivverstärkers analysiert. Die Messwertepaare der Frequenz und Spannung werden in einem Diegramm gegeneinander
-aufgetragen, wodurch sich eine Glockenkurve bildet, was in \autoref{fig:plot} zu sehen ist. Um die markanten Punkte der Glockenkurve zu verdeutlichen ist die Spannung 
+Im ersten Teil des Versuches wird die Filterkurve des Selektivverstärkers analysiert. Die Messwertepaare der Frequenz und Spannung werden in einem Diagramm gegeneinander
+aufgetragen, wodurch sich eine Glockenkurve bildet, was in \autoref{fig:plot} zu sehen ist. Um die markanten Punkte der Glockenkurve zu verdeutlichen, ist die Spannung 
 relativ zur maximalen Spannung (Eingangsspannung) $U_\text{max} = \qty{8.5}{\volt}$ dargestellt. 
 Die Glockenkurve hat die Gestalt
 \begin{equation*}
@@ -34,11 +34,11 @@ Durch eine Regression mittels \textit{scipy} \cite{scipy} ergeben sich die Param
 \end{align}
 Es folgt sofort $\nu_0 = b = \qty{21.75 +- 0.04}{\kilo\hertz}$, die Frequenzen $\nu_-$ und $\nu_+$ können als Schnittpunkte der Funktion mit der Geraden $y = 1/\sqrt{2}$
 grafisch ermittel werden. Dieses Vorgehen kann ebenfalls \autoref{fig:plot} entnommen werden. 
-Es ergibt sich $\nu_- = \qty{21.36}{\kilo\hertz}$ und $\nu_+ = \qty{22.14}{\kilo\hertz}$. 
+Es ergeben sich die Frequenzen $\nu_- = \qty{21.36}{\kilo\hertz}$ und $\nu_+ = \qty{22.14}{\kilo\hertz}$. 
 Durch Einsetzen in \autoref{eqn:Guete} kann der Wert der Güte berechnet werden.
 Unter Beachtung der Gaußschen Fehlerfortpflanzung folgt
 \begin{align*}
-  Q &= \qty{27.89 +- 0.06}{} & \symup{\Delta}(Q) = \qty{39.45}{\percent}.
+  Q &= \num{27.89 +- 0.06}, & \symup{\Delta}(Q) = \qty{39.45}{\percent}.
 \end{align*}
 Die relative Abweichung berechnet sich nach \autoref{eqn:Delta_rel}. Als Theoriewert der Güte wird der am Sinusgenerator einstellbare Wert $Q_\text{real} = 20$ verwendet.
 
@@ -47,8 +47,8 @@ Die relative Abweichung berechnet sich nach \autoref{eqn:Delta_rel}. Als Theorie
 Die Suszptibilität wurde in diesem Versuch auf zwei Arten bestimmt, welche in \autoref{subsec:Messapparatur} beschrieben worden sind. Damit $\chi$ aus den Widerständen gemäß
 Formel \eqref{eqn:chimethode2} berechnet werden kann, wurden zunächst die Querschnittsflächen der Proben bestimmt. Diese wurden zu 
 $Q_{\text{Dy2O3}} = \qty{12.04}{\milli\metre\squared}$, $Q_{\text{Gd2O3}} = \qty{8.89}{\milli\metre\squared}$ und $Q_{\text{C6O12Pr3}} = \qty{56.75}{\milli\metre\squared}$
-bestimmt. Mit einem Spulenquerschnitt von $F = \qty{86,6}{\milli\metre\squared}$, einem $R_3 = \qty{998}{\ohm}$ und einem $\symup{\Delta}R$, welches den Orginalmessdaten 
-entnommen werden kann ergeben sich die Suszeptibilitäten der Proben. Diese werden in \autoref{tab:Chi_exp} dargestellt.
+bestimmt. Mit einem Spulenquerschnitt von $F = \qty{86,6}{\milli\metre\squared}$, dem Widerstand $R_3 = \qty{998}{\ohm}$ und einem $\symup{\Delta}R$, welches den Orginalmessdaten 
+im Anhang entnommen werden kann, ergeben sich die Suszeptibilitäten der Proben. Diese werden in \autoref{tab:Chi_exp} dargestellt.
 \begin{table}
   \centering
   \caption{Experimentell ermittelte Suszeptibilitäten.}
@@ -71,20 +71,21 @@ entnommen werden kann ergeben sich die Suszeptibilitäten der Proben. Diese werd
   \end{tabular}
 \end{table}
 
-Um die Suszeptibilität aus den Spannungen gemäß Formel \autoref{eqn:chi:näherung} zu berechnen sind ebenfalls die bereits beschriebenen Querschnitte nötig. Außerdem wird ein 
+Um die Suszeptibilität aus den Spannungen gemäß \autoref{eqn:chi:näherung} zu berechnen, sind ebenfalls die bereits beschriebenen Querschnitte nötig. Außerdem wird ein 
 $U_{\text{Sp}} = \qty{8.5}{\volt}$ verwendet und die gemessenen Brückenspannungen $U_{\text{Br}}$, welche ebenfalls den Orginalmessdaten im Anhang entnommen werden können.
-Mit diesen Werten ergeben sich dann erneut die Suszeptibilitäten. Diese werden in \autoref{tab:Chi_exp} dargestellt.
+Mit diesen Werten ergeben sich dann erneut experimentelle Werte der Suszeptibilitäten. Diese werden in \autoref{tab:Chi_exp} dargestellt.
 Theoriewerte der Suszeptibilitäten lassen sich nach Formel \eqref{eqn:chi1} berechnen. Die Theoriewerte unterliegen allerdings der Annahme, dass die Proben bei konstanter 
 Raumtemperatur untersucht wurden. Daher wurde eine Raumtemperatur von $T = \qty{293.15}{\kelvin}$ verwendet. Außerdem werden die Quantenzahlen $J$, $S$ und $L$ benötigt. Diese
 können aus den Hundschen Regeln bestimmt werden. Für $\symup{Dy}_2\symup{O}_3$ lauten diese $J = 7.5$, $S = 2.5$ und $L = 5$. $\symup{Gd}_2\symup{O}_3$ hat die Quantenzahlen
-$J = 3.5$, $S = 3.5$ und $L = 0$. Da uns zu $\symup{C}_6\symup{O}_{12}\symup{Pr}_3$ keine Quantenzahlen bekannt sind, konnten auch keine Theoriewerte bestimmt werden.
+$J = 3.5$, $S = 3.5$ und $L = 0$. Da zu $\symup{C}_6\symup{O}_{12}\symup{Pr}_3$ keine Dichte und keine Quantenzahlen ermittelt werden konnten, 
+konnten auch keine Theoriewerte bestimmt werden.
 Mit dem Bohrschen Magneton und dem \textit{Landé-Faktor}, welche einfach von dem bekannten Quantenzahlen abhängt, können dann die theoretischen Suszeptibilitäten der Proben
-bestimmt werden. Die Theoriewerte werden in \autoref{tab:Chi_abwU} dargestellt. Aus diesen wird dann in derselben Tabelle noch die Abweichung vom Theoriewert zum experimentellen
-Wert berechnet. 
+bestimmt werden. Die Theoriewerte werden in \autoref{tab:Chi_abwU} dargestellt. Aus diesen wird dann in derselben Tabelle die Abweichung des experimentellen
+Wertes zum Theoriewert berechnet. 
 
 \begin{table}
   \centering
-  \caption{Abweichung von Theoriewerten zu den berechneten Suszptibilitäten(Spannung).}
+  \caption{Theoriewerte der Suszeptibilitäten und experimentelle Abweichung. (Spannungs-Methode)}
   \label{tab:Chi_abwU}
   \begin{tabular}{c S[table-format = 1.4] S @{${}\pm{}$} l S}
     \toprule
@@ -98,7 +99,7 @@ Wert berechnet.
 \end{table}
 \begin{table}
   \centering
-  \caption{Abweichung von Theoriewerten zu den berechneten Suszptibilitäten(Widerstand).}
+  \caption{Theoriewerte der Suszeptibilitäten und experimentelle Abweichung. (Widerstand-Methode)}
   \label{tab:Chi_abwR}
   \begin{tabular}{c S[table-format = 1.4] S @{${}\pm{}$} l S}
     \toprule
