--- a/v606/v606.tex
+++ b/v606/v606.tex
@@ -1,11 +1,11 @@
 \input{header.tex}
 
-\subject{v606}
+\subject{V606}
 \title{Messung der Suszeptibilität paramagnetischer Stoffe}
 \date{%
   Durchführung: 26.04.2022
   \hspace{3em}
-  Abgabe: 02.05.2022
+  Abgabe: 03.05.2022
 }
 
 \begin{document}
