--- a/v606/content/durchfuehrung.tex
+++ b/v606/content/durchfuehrung.tex
@@ -1,6 +1,6 @@
 \section{Durchführung}
 \label{sec:Durchführung}
-Für die experimentellen Bestimmung der Suszeptibilität verschiedener Stoffe wird eine Schaltung verwendet, die in \autoref{fig:Schaltung2} zu sehen ist.
+Für die experimentelle Bestimmung der Suszeptibilität verschiedener Stoffe wird eine Schaltung verwendet, die in \autoref{fig:Schaltung2} zu sehen ist.
 Um Störspannungen zu vermindern und das Signal der Brückenschaltung zu verstärken, wird ein Selektivverstärker verwendet. Da dieser Filter nur einen 
 bestimmmten Frequenzbereich an Wechselspannungen durchlässt, muss die Frequenz des Sinusgenerators genau auf den Selektivverstärker abgestimmt werden.
 
@@ -19,11 +19,11 @@ Zuerst kann die Lage des Spannungsmaximums grob ermittelt werden. Hierzu kann be
 Um die Filterkurve auszumessen, wird ein ausreichend großer Frequenzbereich um die Frequenz des Spannungsmaximums gewählt. Es werden Messwertepaare der Frequenz
 und der gemessenen Spannung notiert, wobei in der näheren Umgebung des Maximums mehr Messwerte bestimmmt werden sollten, da in diesem Bereich eine starke Steigung 
 des Graphen zu erwarten ist.
-Aus den Messwerten lässt sich die Filterkurve des Selektivverstärkers ermitteln, indem die Spannung als Funktion der Frequenz aufgetragen wird.
+Aus den Messwerten lässt sich die Filterkurve des Selektivverstärkers ermitteln, indem die (normierte) Spannung als Funktion der Frequenz aufgetragen wird.
 
 \subsection{Messreihe zur Bestimmung der Suszeptibilität}
 \label{subsec:D_Suszeptibilität}
-Wie in \autoref{sec:Theorie} beschrieben kann die Suszeptibilität paramagnetischer Stoffe auf zwei verschiedene Weisen experimentell bestimmmt werden. 
+Wie in \autoref{sec:Theorie} beschrieben, kann die Suszeptibilität paramagnetischer Stoffe auf zwei verschiedene Weisen experimentell bestimmmt werden. 
 Die benötigten Messwerte zu den beiden Verfahren können derselben Messreihe entnommen werden. 
 
 Da die verwendeten Proben in Pulverform vorliegen und so nicht die Dichte eines Einkristalles selbigen Materials erreichen, muss zunächst diese Abweichung
@@ -34,9 +34,7 @@ multipliziert wird. Da $\rho = \sfrac{M}{V}$ ($M$: Masse, $V$: Volumen) gilt, ka
     \label{eqn:Q_real}
     Q_\text{real} = \frac{M_\text{P}}{l \rho_\text{E}}
 \end{equation}
-berechnet werden.
-
-Aus diesem Grund wird die Länge $l$ jeder Probe zuvor bestimmt. 
+berechnet werden, wozu die Länge $l$ jeder Probe zuvor bestimmt werden muss. 
 
 Die aus der Filterkurve bestimmte Frequenz des Spannungsmaximums wird an dem Sinusgenerator eingestellt. Da ein anderer Spannungsgenerator verwendet wird, sollte 
 überprüft werden, ob tatsächlich das Maximum der Spannung vorliegt.
@@ -44,5 +42,5 @@ Die aus der Filterkurve bestimmte Frequenz des Spannungsmaximums wird an dem Sin
 Vor jeder Messung wird mithilfe des regelbaren Widerstands $R_\text{P}$ die gemessene Spannung auf ein Minimum geregelt. Der eingestellte Widerstand und die angezeigte 
 Spannung werden notiert. Anschließend wird das Proberöhrchen in die dafür vorgesehene Öffnung eingeführt und die nun gemessene Spannung vermerkt. 
 Dieser Wert bietet eine der zwei Möglichkeiten zur experimentellen Bestimmung der Suszeptibilität. Über den Widerstand $R_\text{P}$ kann wieder ein Minimum der Spannung
-eingestellt werden. Aus diesem Wert kann ebenfalls die Suszeptibilität des Stoffes bestimmmt werden. Auch die zugehörige Spannung wird wieder notiert.
+eingestellt werden. Aus diesem Wert kann ebenfalls die Suszeptibilität des Stoffes bestimmmt werden. Auch die zugehörige Spannung wird abermals notiert.
 Dieses Vorgehen wird für jede Probe drei Mal durchgeführt. Insgesamt werden Proben drei verschiedener Stoffe untersucht.  
