nur zwei pilleplale fehler du mumu

--- a/v606/content/theorie.tex
+++ b/v606/content/theorie.tex
@@ -36,7 +36,7 @@ Die potentielle Energie der Ausrichtungen der magnetischen Momente kann mittels 
 \end{equation} 
 berechnet werden. Dabei ist $\mu_{\text{B}}$ das \textit{Bohrsche Magneton}. Nach Aufspaltung der Energieniveaus tritt der \textit{Zeeman-Effekt} auf. Um nun die Magnetisierung
 berechnen zukönnen, muss die Häufigkeit bestimmter Orientierungen der magnetischen Momente ermittelt werden. Diese verteilen sich gemäß der \textit{Boltzmann-Verteilung}
-auf die  Energieunterniveaus. Nach Summation über die Enrgieniveaus kann ein mittleres magnetisches Moment berechnet werden. Diese lässt sich gemäß der \textit{Brillouin-Funktion}
+auf die  Energieunterniveaus. Nach Summation über die Enrgieniveaus kann ein mittleres magnetisches Moment berechnet werden. Dieses lässt sich gemäß der \textit{Brillouin-Funktion}
 berechnen. Diese Formel lässt sich allerdings im allgemeinen nicht analytisch lösen. 
 Aus diesem Grund wird die Näherung verwendet, dass das Problem bei Raumtemperatur und schwachen Feldern betrachtet wird.
 In dieser Näherung kann die Magnetisierung bestimmt werden.
