Ordner erstellt und die kack Messwerte abgetippert

--- a/lit.bib
+++ b/lit.bib
@@ -132,3 +132,11 @@
 	urldate      = {2022-04-27},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1933356/mod_resource/content/1/V606.pdf},
 }
+
+@online{v503,
+	title        = {V503 - Der Milikan Öltröpfchenversuch},
+	organization = {TU Dortmund},
+	urldate      = {2022-05-03},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1977249/mod_resource/content/2/V503.pdf},
+}
+
